correction title home retrait du text align center

--- a/src/design/SASS/home.scss
+++ b/src/design/SASS/home.scss
@@ -56,7 +56,6 @@ body {
   .main__container {
     .title__home {
       font-size: 20px;
-      text-align: center;
     }
     .first__paragraphe {
       font-size: 13px;
